--- a/fop-events/pom.xml
+++ b/fop-events/pom.xml
@@ -2,13 +2,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.apache.xmlgraphics</groupId>
+  <groupId>org.metanorma</groupId>
   <artifactId>fop-events</artifactId>
   <name>Apache FOP Events</name>
   <description>XML Graphics Format Object Processor Events</description>
 
   <parent>
-    <groupId>org.apache.xmlgraphics</groupId>
+    <groupId>org.metanorma</groupId>
     <artifactId>fop-parent</artifactId>
     <version>2.10.0-SNAPSHOT</version>
   </parent>
@@ -38,7 +38,7 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.xmlgraphics</groupId>
+      <groupId>org.metanorma</groupId>
       <artifactId>xmlgraphics-commons</artifactId>
       <version>${xmlgraphics.commons.version}</version>
     </dependency>
