--- a/fop-sandbox/pom.xml
+++ b/fop-sandbox/pom.xml
@@ -2,13 +2,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.apache.xmlgraphics</groupId>
+  <groupId>org.metanorma</groupId>
   <artifactId>fop-sandbox</artifactId>
   <name>Apache FOP Sandbox</name>
   <description>XML Graphics Format Object Processor Sandbox</description>
 
   <parent>
-    <groupId>org.apache.xmlgraphics</groupId>
+    <groupId>org.metanorma</groupId>
     <artifactId>fop-parent</artifactId>
     <version>2.10.0-SNAPSHOT</version>
   </parent>
@@ -31,33 +31,6 @@
 
   <build>
     <plugins>
-      <!-- generate event collector models -->
-      <!--
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <version>${antrun.plugin.version}</version>
-        <executions>
-          <execution>
-            <id>codegen-events</id>
-            <phase>process-classes</phase>
-            <goals>
-              <goal>run</goal>
-            </goals>
-            <configuration>
-              <target>
-                <taskdef name="collectEvents" classname="org.apache.fop.tools.EventProducerCollectorTask" classpathref="maven.compile.classpath"/>
-                <collectEvents destdir="${project.build.outputDirectory}">
-                  <fileset dir="${project.basedir}/src/main/java">
-                    <include name="**/accessibility/AccessibilityEventProducer.java"/>
-                  </fileset>
-                </collectEvents>
-              </target>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      -->
       <!-- junit testing -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
